--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>huffman.decompressor.hab/huffman.decompressor.hab.HelloApplication</mainClass>
+                            <mainClass>huffman.decompressor.hab/huffman.decompressor.hab.gui.MainController</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
